--- a/Cqrs/appsettings.json
+++ b/Cqrs/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=Cqrs;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
